--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 requests==2.31.0
-pandas==2.1.4
+pandas>=2.2.0,<3.0.0
 openpyxl==3.1.2
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
@@ -7,8 +7,8 @@ google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
 
 # Supabase для работы с БД
-supabase==2.3.0
-postgrest-py==0.13.0
+supabase>=2.3.0,<3.0.0
+postgrest-py>=0.10.0,<0.11.0
 
 # Веб-интерфейс
 streamlit==1.31.0
